; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_output.c_print_def_overall_static_files.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_output.c_print_def_overall_static_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32 }

@.str = private unnamed_addr constant [8 x i8] c"numeric\00", align 1
@T_STATIC_FILES = common dso_local global i32 0, align 4
@OVERALL_STATIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @print_def_overall_static_files to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_def_overall_static_files(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %6, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %8 = load i32, i32* @T_STATIC_FILES, align 4
  store i32 %8, i32* %7, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* @OVERALL_STATIC, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @fpopen_obj_attr(i32* %9, i32 %10, i32 %11)
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* %4, align 4
  %15 = bitcast %struct.TYPE_3__* %5 to { i8*, i32 }*
  %16 = getelementptr inbounds { i8*, i32 }, { i8*, i32 }* %15, i32 0, i32 0
  %17 = load i8*, i8** %16, align 8
  %18 = getelementptr inbounds { i8*, i32 }, { i8*, i32 }* %15, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @print_def_metric(i32* %13, i8* %17, i32 %19, i32 %14)
  %21 = load i32*, i32** %3, align 8
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @fpclose_obj(i32* %21, i32 %22, i32 0)
  ret void
}

declare dso_local i32 @fpopen_obj_attr(i32*, i32, i32) #1

declare dso_local i32 @print_def_metric(i32*, i8*, i32, i32) #1

declare dso_local i32 @fpclose_obj(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
